--- a/app/globals.css
+++ b/app/globals.css
@@ -1,77 +1,10 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
 
 * {
   box-sizing: border-box;
@@ -85,23 +18,201 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
 }
+.node {
+  padding: 30px;
+  background: #ffcf40;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.node p {
+  font-size: 20px;
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+}
+.node .date {
+  margin-top: auto;
+  width: 60%;
+  font-size: 15px;
+}
+#nodes {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+#add_nodes {
+  background: #56c456;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+#add_nodes textarea {
+  background: none;
+  border: none;
+  width: 100%;
+  height: 100px;
+  resize: none;
+  font-size: 20px;
+}
+#add_nodes button, .node button {
+  margin-left: auto;
+  color: white;
+  border: 1px solid white;
+  padding: 5px;
+  border-radius: 5px;
+  transition: all 0.5s;
+  font-weight: bold;
+}
+.node button { 
+  width: 40%;
+  margin-top: auto;
+}
+.node button:hover {
+  color:#ffcf40;
+  background-color: white;
+}
+#add_nodes p {
+  width: 100%;
+  padding-bottom: 20px;
+  text-align: right;
+  font-size: 13px;
+}
+#add_nodes button:hover {
+  background-color: white;
+  color: #56c456;
+}
+
+#add_nodes textarea:focus,
+input:focus {
+  outline: none;
+}
+button {
+  border: none;
+  background: none;
+
+}
+button:hover {
+  cursor: pointer;
+}
+.main-text {
+  width: 100%;
+}
+h1 {
+  font-size: 40px;
+
+}
+#search { 
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+#search input {
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid black;
+  padding: 7px;
+  font-size: 20px;
+  
+}
+#header {
+  display: flex;
+
+}
+#header h1 {
+  width: 80%;
+  margin-bottom: 0px;
+
+}
+#header button {
+  margin-left: auto;
+  border: 1px solid black;
+  border-radius: 8px;
+  padding: 20px;
+  transition: all 0.5s;
+  font-size: 15px;
+}
+#header button:hover {
+  background: #000;
+  color:white;
+}
+#darkTheme {
+  background: #000;
+}
+#darkTheme h1 {
+  color: white;
+
+}
+#darkTheme #header button {
+  border:  1px solid white;
+  color: white;
+}
+#darkTheme #header button:hover {
+  background: white;
+  color: black;
+}
+@media(max-width: 1300px) {
+  .node {
+    padding: 20px;
+    
   }
+  .node button {
+    font-size: 0.7em;
+  }
+}
+@media(max-width: 1200px) {
+  #nodes {
+    grid-template-columns: repeat(3, 1fr);
+}
+.node .date {
+  width: 54%;
+  font-size: 0.9em;
+}
+.node button {
+  width: 46%;
+}
+
+}
+@media(max-width: 861px) {
+  #nodes {
+    grid-template-columns: repeat(2, 1fr);
+}
+.node button {
+  width: 46%;
+}
+.node .date {
+  font-size: 0.8em;
+}
+.node p {
+  font-size: 18px;
+  
+}
+.main-text {
+  margin-bottom: 15px;
+}
+#add_nodes textarea {
+  font-size: 18px;
+}
+}
+@media (max-width: 600px) {
+  #nodes {
+    grid-template-columns: repeat(1, 1fr);
+}
+#header  {
+  flex-direction: column;
+}
+#header h1, #header button {
+  width: 100%;
+  text-align: center;
+}
+#header h1 {
+  padding-bottom: 20px;
+}
+#header button {
+  padding: 10px;
+}
+#search {
+  margin: 20px 0px;
+}
 }
